--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="src/main/Log4J"/>
 	<classpathentry kind="src" path="src/main/Config.Properties"/>
 	<classpathentry kind="src" path="src/main/Features"/>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
